<resources>
    <string name="app_name">MyWeather</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather">Weather</string>
    <string name="player">Video</string>
    <string name="map">Map</string>
    <string name="second_fragment">Second Fragment</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="name_of_the_city">Name of the city</string>
    <string name="city_successfully_added">City successfully added</string>
    <string name="add_new_city">Add a new city</string>
    <string name="characters_maximum">20 characters maximum</string>
    <string name="field_cant_be_empty">Field can\'t be empty</string>
    <string name="city_successfully_deleted">City successfully deleted</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="valid_internet_connection">Valid internet connection</string>
    <string name="weather_info_updated">Weather information updated</string>
    <string name="city_already_exist">This city already exist in your list</string>
    <string name="no_city_found">No city found, please enable internet and/or enter a correct city name and the correct country code that goes with it</string>
    <string name="edit_the_city">Edit the city</string>
    <string name="new_name_of_the_city">New name of the City</string>
    <string name="new_code_of_the_country">New code of the country</string>
    <string name="code_of_the_country">Code of the country</string>
    <string name="forecast">Forecast</string>
    <string name="select_a_city">Select a city</string>
    <string name="allow_geolocation">Allow MyWeather to access your geolocation</string>
</resources>