<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/weather"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_cloud_24"
        android:title="@string/weather" />

    <item
        android:id="@+id/web_view"
        android:enabled="true"
        android:icon="@drawable/baseline_pageview_24"
        android:title="@string/forecast" />

    <item
        android:id="@+id/google_map"
        android:enabled="true"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/map" />

    <item
        android:id="@+id/player"
        android:enabled="true"
        android:icon="@drawable/baseline_smart_display_24"
        android:title="@string/player" />
</menu>